charon/tests/ui/traits/dyn-sized.rs
//@ known-failure

pub type DynSized = dyn Sized;

fn main() {}
